# docx-editor-skill

./: CLAUDE.md  MIGRATION.md  README.md  SKILL.md  install.sh  pyproject.toml
src/docx_editor_skill/: __main__.py  cli.py
tests/: conftest.py
tests/e2e/: test_copy_paragraph_e2e.py  test_e2e.py  test_format_copy_e2e.py  test_format_painter_workflow.py  test_full_workflow.py  test_load_edit.py  test_navigation_e2e.py  test_special_ids_workflow.py  test_template_extraction.py  test_update_text_e2e.py
tests/helpers/: __init__.py  session_helpers.py
tests/unit/: conftest.py  test_cli_semantic.py  test_commit.py  test_composite_tools.py  test_content_tools_extended.py  test_copy_paragraph.py  test_cross_os_validation.py  test_element_id_enhancement.py  test_extract_template_tool.py  test_format_painter_advanced_font.py  test_format_painter_core.py  test_format_painter_para.py  test_format_painter_run.py  test_format_painter_smart.py  test_format_painter_table.py  test_global_state.py  test_load_existing.py  test_logging_stacktrace.py  test_optimized_content_tools.py  test_paragraph_tools_json.py  test_path_validation.py  test_preview_structure.py  test_properties.py  test_replace_text_preserves_format.py  test_replacer_image.py  test_response_markdown.py  test_response_tracking.py  test_run_format_tools_json.py  test_server_content.py  test_server_core_refactor.py  test_server_formatting.py  test_server_lifecycle.py  test_server_tables.py  test_session.py  test_session_context.py  test_session_dirty_tracking.py  test_session_history.py  test_session_id_cleaning.py  (+11 more)
(+50 files in other folders)
